--- a/components/navigation.html
+++ b/components/navigation.html
@@ -1,8 +1,9 @@
 <nav>
     <ul class="nav-links">
         <li><a href="../pages/index.html">Home</a></li>
+        <li><a href="../pages/about.html">About</a></li>
         <li><a href="../pages/photos.html">Photos</a></li>
-        <li><a href="../pages/donate.html">Donate</a></li>
-        <li><a href="../pages/contact.html">Contact</a></li>
+        <li><a href="../pages/concerts.html">Concerts</a></li>
+        <li><a href="../pages/donate.html">Support us</a></li>
     </ul>
 </nav>
