edited all info

--- a/components/navigation.html
+++ b/components/navigation.html
@@ -2,7 +2,7 @@
     <ul class="nav-links">
         <li><a href="../pages/index.html">Home</a></li>
         <li><a href="../pages/about.html">About</a></li>
-        <li><a href="../pages/photos.html">Photos</a></li>
+        <!-- <li><a href="../pages/photos.html">Photos</a></li> -->
         <li><a href="../pages/concerts.html">Concerts</a></li>
         <li><a href="../pages/donate.html">Support us</a></li>
     </ul>
