--- a/components/title.html
+++ b/components/title.html
@@ -1,15 +1,5 @@
 <header class="title-section">
     <img src="../images/performance.jpeg" alt="Willimantic Orchestra Performance at Eastern Connecticut State University">
-    <!-- <h1>Willimantic Orchestra</h1> -->
-    <div class="container">
-        <div class="column-img">
-            <img src="../images/WO_log.png" alt="Willimantic Orchestra Logo">
-        </div>
-        <div class="column-txt">
-            <h2>Willimantic Orchestra</h2>
-            <p>
-                
-            </p>
-        </div>
-    </div>  
+    <h1>Willimantic Orchestra</h1>
+    <p class="news">Concert: March 2nd at 4pm, Fine Arts Instructional Cernter at ECSU</p>
 </header>
