--- a/components/navigation.html
+++ b/components/navigation.html
@@ -1,6 +1,6 @@
 <nav>
     <ul class="nav-links">
-        <li><a href="../pages/index.html">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="../pages/about.html">About</a></li>
         <!-- <li><a href="../pages/photos.html">Photos</a></li> -->
         <li><a href="../pages/concerts.html">Concerts</a></li>
