--- a/components/title.html
+++ b/components/title.html
@@ -1,5 +1,5 @@
 <header class="title-section">
-    <img src="../images/performance.jpeg" alt="Willimantic Orchestra Performance at Eastern Connecticut State University">
+    <img class="title-image" src="../images/performance.jpeg" alt="Willimantic Orchestra Performance at Eastern Connecticut State University">
     <h1>Willimantic Orchestra</h1>
     <p class="news">Concert: March 2nd at 4pm, Fine Arts Instructional Cernter at ECSU</p>
 </header>
