--- a/main.css
+++ b/main.css
@@ -1,7 +1,8 @@
 body {
     font-family:Georgia, 'Times New Roman', Times, serif ;
-    margin: 5%;
-    padding: 5%;
+    /* margin: 5%; */
+    padding-left: 15%;
+    padding-right: 15%;
     background-color:#333;
     color: whitesmoke;
 }
