--- a/components/title.html
+++ b/components/title.html
@@ -2,4 +2,5 @@
     <img class="title-image" src="../images/performance.jpeg" alt="Willimantic Orchestra Performance at Eastern Connecticut State University">
     <h1>Willimantic Orchestra</h1>
     <p class="news">Concert: March 2nd at 4pm, Fine Arts Instructional Cernter at ECSU</p>
+    <p class="news">All are welcome!</p>
 </header>
