--- a/main.css
+++ b/main.css
@@ -1,11 +1,13 @@
 body {
     font-family:Georgia, 'Times New Roman', Times, serif ;
     /* margin: 5%; */
-    padding-left: 15%;
-    padding-right: 15%;
+    padding-left: clamp(15px, 1%, 80px);
+    padding-right: clamp(15px, 1%, 80px);
     background-color:#333;
     color: whitesmoke;
 }
+
+
 
 body a{
     color: lightgoldenrodyellow;
@@ -13,12 +15,13 @@ body a{
 
 h1, h2{
     text-align: center;
+    font-size: clamp(24px, 8vw, 32px);
 }
 
 nav {
     background-color: #848181;
     padding: 2px;
-    font-size: large;
+    font-size: clamp(16px, 4vw, 24px);
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
@@ -61,7 +64,7 @@ main {
 }
 .container{
     display: flex;
-    padding: 1%;
+    padding: clamp(1px, 1%, 80px);
 }
 .column-img{
     flex:20%;
@@ -76,13 +79,13 @@ main {
     padding: 10px;
 }
 .main-text{
-    font-size: large;
+    font-size: clamp(14px, 3vw, 24px);
     text-align: left;
 }
 
 .news{
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
-    font-size: large;
+    font-size: clamp(14px, 3vw, 24px);
 }
 
