mobile view and  no word break

--- a/components/navigation.html
+++ b/components/navigation.html
@@ -4,6 +4,6 @@
         <li><a href="../pages/about.html">About</a></li>
         <!-- <li><a href="../pages/photos.html">Photos</a></li> -->
         <li><a href="../pages/concerts.html">Concerts</a></li>
-        <li><a href="../pages/donate.html">Support us</a></li>
+        <li><a href="../pages/donate.html">Support&nbsp;us</a></li>
     </ul>
 </nav>
