--- a/components/title.html
+++ b/components/title.html
@@ -1,6 +1,6 @@
 <header class="title-section">
     <img class="title-image" src="../images/performance.jpeg" alt="Willimantic Orchestra Performance at Eastern Connecticut State University">
     <h1>Willimantic Orchestra</h1>
-    <p class="news">Upcoming: Sunday, May 4th at 2pm, Fine Arts Instructional Cernter at ECSU</p>
-    <p class="news">All are welcome!</p>
+    <p class="news"></p>
+    <p class="news"></p>
 </header>
