update concert time for 2025 winter

--- a/main.css
+++ b/main.css
@@ -95,7 +95,7 @@ main li{
 }
 
 .news{
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    /* font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
     text-align: center;
     font-size: clamp(14px, 3vw, 24px);
 }
