--- a/components/title.html
+++ b/components/title.html
@@ -3,6 +3,6 @@
     <h1>Willimantic Orchestra</h1>
     <p class="news">Upcoming Concert: </p>
     <p class="news">Saturday, December 13, 2025, at 3:00 PM</p>
-    <p class="news">Location: TBD</p>
+    <p class="news">Location:  <a href="https://vdm.uconn.edu/">von der Mehden Recital Hall, UConn</a></p>
 
 </header>
