--- a/components/title.html
+++ b/components/title.html
@@ -1,8 +1,8 @@
 <header class="title-section">
     <img class="title-image" src="../images/performance.jpeg" alt="Willimantic Orchestra Performance at Eastern Connecticut State University">
     <h1>Willimantic Orchestra</h1>
-    <!-- <p class="news">Upcoming Concert: </p>
-    <p class="news">Saturday, December 13, 2025, at 3:00 PM</p>
-    <p class="news">Location:  <a href="https://vdm.uconn.edu/">von der Mehden Recital Hall, UConn</a></p> -->
+    <p class="news">Upcoming 2026 Winter Concert: </p>    
+    <p class="news">March 15th, 3pm</p>
+    <p class="news">Location:  Windham High School</p> 
 
 </header>
